--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ body{
   padding: 0;
   margin: 0;
   z-index: 10;
+  cursor: pointer;
 }
 .logo img{
   display: block;
@@ -384,13 +385,14 @@ letter-spacing: 0.05em;
   font-family: Arial, Helvetica, sans-serif;
 }
 .p-price{
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
   padding: 5px 0px;
   font-weight:400;
-  color:rgb(58,57,57);
+  color:rgb(24, 24, 24);
   font-size: 1rem;
   line-height: 1.25rem;
+  font-weight: bold;
 }
 
 .p-name{
@@ -403,13 +405,13 @@ letter-spacing: 0.05em;
   text-transform: uppercase;
   margin-bottom: 0.5em;
 }
-.p-builder{
+.p-gender{
   width: 100%;
   padding: 2px 0px;
-  font-size: 1rem;
+  font-size: 0.8rem;
   line-height: 1.5rem;
-  color:rgb(98, 98, 98);
-  font-weight: 400;
+  color:#222;
+  font-weight: 500;
 }
 .p-color{
   margin-top: 5px;
@@ -588,7 +590,9 @@ letter-spacing: 0.05em;
   border: 1px solid #4830314f;
   cursor: pointer;
   border-radius: .1875rem;
+  overflow: hidden;
   transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(32, 1, 7, 0.1), 0 1px 2px rgba(32, 1, 7, 0.2);
 }
 .categoryItemBlock:hover{
   box-shadow: 0 7px 14px rgba(32, 1, 7, 0.25), 0 5px 5px rgba(32, 1, 7,0.22);
@@ -634,6 +638,23 @@ letter-spacing: 0.05em;
 }
 .exploreButton:hover{
   color: #832729;
+}
+
+.exploreButtonBox{
+  color: #000;
+  border: 1px solid rgba(74, 35, 37, 0.7);
+  width: calc(100% - 1em);
+  height: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.1875rem;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.exploreButtonBox:hover{
+  background-color: #832729;
+  color: #fff;
 }
 .categoryTitleContainer:hover .exploreButton{
   color: #832729;
