--- a/src/style.css
+++ b/src/style.css
@@ -701,16 +701,28 @@ li{
 }
 #weddHead{
   color: #fafafa;
-  font-size: 3.5em;
-  font-style: italic;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 4.5em;
+  font-weight: 200;
+  /* font-style: italic; */
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-family: 'Playball';
+  margin-bottom: 0;
+}
+#weddHeadUnique{
+  color: #0079ff;
+  padding-right: 0.1em;
+  background: linear-gradient(to bottom, #4e3b1b 15%, #937d4c 20%, #cfc09f 30%,#ffecb3 40%,#523d13 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 #weddSubHead{
+  margin-top: 0;
   color: #fafafa;
   font-size: 2em;
-  font-weight: 300;
-  font-style: italic;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: lighter;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-family: 'Playball';
+
 }
 #weddsub{
   color: #d0d0d0;
@@ -755,4 +767,71 @@ li{
 }
 #customizeButton:hover #customizeButtonCircle{
   border: 2px solid  rgb(238, 238, 238);
+}
+
+#customizeEditorContainer{
+  position: fixed;
+  top: 40vh;
+  left: 40vw;
+  height: 20vh;
+  width: 20vw;
+  background-image: radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
+  /* background-color: #d1d4e7; */
+  /* background-image: radial-gradient(rgb(176, 176, 176),rgb(94, 94, 94)); */
+  /* background-image: radial-gradient(rgb(233, 187, 202),rgb(182, 119, 140)); */
+  z-index: 50;
+  opacity: 0;
+  transition: 0.3s ease-in;
+  display: flex;
+  align-items: center;
+}
+#closeEditorDiv{
+  position: fixed;
+  top: 1.5em;
+  right: 1.5em;
+  font-size: 1.4em;
+  font-weight: bold;
+  color: rgba(108, 34, 34, 0.699);
+  font-family: sans-serif;
+  cursor: pointer;
+  transition: 0.5s;
+  z-index: 100;
+}
+#closeEditorDiv:hover{
+  color: white;
+  transform: scale(1.5);
+}
+
+#editorLoader{
+  position: absolute;
+  padding: 0 15vw;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: calc(100% - 30vw);  
+  background-image: radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#loader{
+  height: 5px;
+  background-color: rgba(255, 255, 255, 0.838);
+  width: 0%;
+  border-radius: 0.15rem;
+  transition: 0.5s;
+  z-index: 50;
+}
+
+#editorSceneBlock{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin-left: -20%;
+}
+
+#editorSceneBlock{
+
 }
