--- a/src/style.css
+++ b/src/style.css
@@ -769,16 +769,29 @@ li{
   border: 2px solid  rgb(238, 238, 238);
 }
 
+:root,
+  :root.day{
+  --bg-image:radial-gradient(rgb(223, 187, 192) 50%,rgb(203, 141, 150));
+  --text-color:#4d0316;
+  --variation-text: #5b0e17d9;
+  }
+  :root.night{
+    --bg-image:radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
+    --text-color:#ffffff;
+    --variation-text: #bebebe;
+  }
+
 #customizeEditorContainer{
   position: fixed;
   top: 40vh;
   left: 40vw;
   height: 20vh;
   width: 20vw;
-  background-image: radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
+  background-image: var(--bg-image);
+  /* background-image: radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11)); */
   /* background-color: #d1d4e7; */
   /* background-image: radial-gradient(rgb(176, 176, 176),rgb(94, 94, 94)); */
-  /* background-image: radial-gradient(rgb(233, 187, 202),rgb(182, 119, 140)); */
+  /* background-image: radial-gradient(rgb(223, 187, 192) 50%,rgb(203, 141, 150)); */
   z-index: 50;
   opacity: 0;
   transition: 0.3s ease-in;
@@ -787,19 +800,20 @@ li{
 }
 #closeEditorDiv{
   position: fixed;
-  top: 1.5em;
-  right: 1.5em;
+  top: 1em;
+  right: 1.2em;
   font-size: 1.4em;
   font-weight: bold;
-  color: rgba(108, 34, 34, 0.699);
+  color: var(--text-color);
   font-family: sans-serif;
   cursor: pointer;
   transition: 0.5s;
-  z-index: 100;
+  z-index: 150;
+  opacity: 0.3;
 }
 #closeEditorDiv:hover{
-  color: white;
   transform: scale(1.5);
+  opacity: 0.9;
 }
 
 #editorLoader{
@@ -834,4 +848,110 @@ li{
 
 #editorSceneBlock{
 
+}
+
+#sceneBackgroundControlDiv{
+  position: absolute;
+  height: 3em;
+  top: 0;
+  left: 0;
+}
+
+#moon{
+  height: 2em;
+  width: 2em;
+  margin-left: 2em;
+  margin-top: 2em;
+  opacity: 0.3;
+  cursor: pointer;
+  transition: 0.5s;
+}
+#moon:hover{
+  opacity: 0.8;
+}
+
+#mconfiguratorBlock{
+  overflow: hidden;
+  position: absolute;
+  height: 95vh;
+  top: 2.5vh;
+  right: 1vw;
+  width: 30vw;
+  /* background-color: rgb(195, 195, 195); */
+  border-radius: 0.45rem;
+  z-index: 100;
+  /* box-shadow: 0 0 5px 5px #a5a5a524; */
+  box-shadow:0 2px 4px rgba(32, 1, 7, 0.1), 0 2px 14px rgba(32, 1, 7, 0.2);
+  opacity: 1;
+  transition: 0.4s ease-in;
+
+}
+
+#mconfiguratorBlock:before{
+  content: "";
+  position: absolute;
+  height: calc(95vh + 50px);
+  top: -25px;
+  right: 2vw;
+  left: -25px;
+  bottom:0;
+  width: calc(30vw + 50vw);
+  background-image: inherit;
+  /* z-index: 100; */
+  /* border-radius: 0.25rem; */
+  filter: blur(3px);
+  box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
+  opacity: .6;
+  
+}
+
+#mconfigurator{
+  overflow: hidden;
+  position: absolute;
+  height: 95vh;
+  top: 2.5vh;
+  right: 1vw;
+  width: 30vw;
+  border-radius: 0.45rem;
+  z-index: 100;
+  overflow-x: hidden;
+  transition: 0.4s ease-in;
+}
+
+.variations{
+  margin-left: 1em;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  color: white;
+  font-family: sans-serif;
+}
+
+.variationTitle{
+  display: block;
+  margin-bottom: 0.5em;
+  font-size: 1em;
+  color: var(--variation-text);
+  border-bottom: 1px solid #ffffff4d;
+  padding-bottom: 0.3em;
+  width: 95%;
+}
+
+.variationTile{
+  background: #f5fcff42;
+  width: calc(95% - 2em);
+  padding: 1em 1em;
+  border-radius: 0.45rem;
+  display: flex;
+  white-space: break-spaces;
+}
+.variationSelector{
+  height: 4.2em;
+  width: 4.2em;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.variationImage{
+  height: 4.2em;
+  width: 4.2em;
+  margin: auto;
 }
