--- a/src/style.css
+++ b/src/style.css
@@ -955,3 +955,124 @@ li{
   width: 4.2em;
   margin: auto;
 }
+
+#ringSelectorDiv{
+  position: absolute;
+  height: 43vh;
+  min-height: 200px;
+  min-width: 700px;
+  width: 70vw;
+  left: 15vw;
+  top: 30vh;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+}
+#selectorTitle{
+  position: absolute;
+  color:rgb(207, 207, 207);
+  height:1.5em;
+  font-size:0.8em;
+  bottom: 0;
+  width: 10em;
+  background-color: #616161;
+  font-family: sans-serif;
+  padding: 0.2em 0.2em;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  border-radius: 0.9em;
+}
+#ringSelectorBlock{
+  position: absolute;
+  overflow: hidden;
+  height: 38vh;
+  min-height: 200px;
+  min-width: 700px;
+  width: 72vw;
+  /* left: 15vw; */
+  /* top: 30vh; */
+  border-radius: 0.45rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: inherit;
+  z-index: 100;
+  box-shadow:0 2px 4px rgba(18, 17, 17, 0.1), 0 2px 14px rgba(18, 17, 17, 0.2);
+  opacity: 1;
+  transition: 0.4s ease-in;
+}
+
+#ringSelectorBlock:before{
+  content: "";
+  position: absolute;
+  height: calc(38vh + 50px);
+  top: -25px;
+  right: 2vw;
+  left: -25px;
+  bottom:0;
+  width: calc(72vw + 50px);
+  background-image: inherit;
+  filter: blur(3px);
+  box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
+  opacity: 0.6;
+}
+
+#ringSelectorContainer{
+  height:calc(93% - 0.5em);
+  width:97%;
+  border-radius:0.35em;
+  z-index:150;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 0.5em;
+  /* scrollbar-width: none;  */
+  /* -ms-overflow-style: none; */
+}
+
+#ringSelectorContainer::-webkit-scrollbar{
+  height: 0.7em;
+  opacity: 0.2;
+}
+
+#ringSelectorContainer::-webkit-scrollbar-track{
+  background-color: #c5c5c524; 
+  border-radius:0.5em;
+  border: 1px solid rgba(188, 188, 188, 0.33);
+}
+
+#ringSelectorContainer::-webkit-scrollbar-thumb {
+  background: #2d2d2dda; 
+  border: 1px solid rgb(112, 112, 112);
+  border-radius:0.5em;
+}
+
+#ringSelectorContainer::-webkit-scrollbar-thumb:hover {
+  background: #2d2d2d; 
+}
+
+.ringCatalogContainer{
+  flex: 0 0 auto;
+  z-index: 150;
+  height: calc(100% - 6px);
+  width: 14em;
+  border-radius: 0.35em;
+  margin-right: 1em;
+  border: 5px solid  rgba(27, 27, 27, 0);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+.ringCatalogContainer:hover{
+ border: 5px solid rgba(30, 143, 255, 0.645);
+ box-shadow: 0 0 0.2em 0.5em rgba(50, 50, 50, 0.655);
+}
+
+.ringSelectorCatalogImage{
+  object-fit: fill;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.3em;
+  overflow: hidden;
+}
