--- a/src/style.css
+++ b/src/style.css
@@ -824,7 +824,7 @@ li{
   height: 100%;
   width: calc(100% - 30vw);  
   background-image: radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
-  z-index: 20;
+  z-index: 120;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -835,8 +835,8 @@ li{
   background-color: rgba(255, 255, 255, 0.838);
   width: 0%;
   border-radius: 0.15rem;
-  transition: 0.5s;
-  z-index: 50;
+  transition: 1s;
+  z-index: 150;
 }
 
 #editorSceneBlock{
@@ -1057,7 +1057,7 @@ li{
   flex: 0 0 auto;
   z-index: 150;
   height: calc(100% - 6px);
-  width: 14em;
+  width: 17em;
   border-radius: 0.35em;
   margin-right: 1em;
   border: 5px solid  rgba(27, 27, 27, 0);
@@ -1070,7 +1070,7 @@ li{
 }
 
 .ringSelectorCatalogImage{
-  object-fit: fill;
+  object-fit: cover;
   height: 100%;
   width: 100%;
   border-radius: 0.3em;
