--- a/src/style.css
+++ b/src/style.css
@@ -774,11 +774,15 @@ li{
   --bg-image:radial-gradient(rgb(223, 187, 192) 50%,rgb(203, 141, 150));
   --text-color:#4d0316;
   --variation-text: #5b0e17d9;
+  --ringSettings:#b57887;
+  --ringSettingsHover:#c893a0;
   }
   :root.night{
     --bg-image:radial-gradient(rgb(39, 39, 39),rgb(11, 11, 11));
     --text-color:#ffffff;
     --variation-text: #bebebe;
+  --ringSettings:#505050;
+    --ringSettingsHover:#686868;
   }
 
 #customizeEditorContainer{
@@ -800,8 +804,8 @@ li{
 }
 #closeEditorDiv{
   position: fixed;
-  top: 1em;
-  right: 1.2em;
+  top: calc(5rem + 2.5%);
+  right: 2vw;
   font-size: 1.4em;
   font-weight: bold;
   color: var(--text-color);
@@ -841,7 +845,7 @@ li{
 
 #editorSceneBlock{
   position: relative;
-  height: 100%;
+  height: calc(100vh - 3em);
   width: 100%;
   margin-left: -20%;
 }
@@ -873,8 +877,7 @@ li{
 #mconfiguratorBlock{
   overflow: hidden;
   position: absolute;
-  height: 95vh;
-  top: 2.5vh;
+  height: 95%;
   right: 1vw;
   width: 30vw;
   /* background-color: rgb(195, 195, 195); */
@@ -890,12 +893,12 @@ li{
 #mconfiguratorBlock:before{
   content: "";
   position: absolute;
-  height: calc(95vh + 50px);
+  height: calc(100% + 50px);
   top: -25px;
   right: 2vw;
   left: -25px;
   bottom:0;
-  width: calc(30vw + 50vw);
+  width: calc(30vw + 50px);
   background-image: inherit;
   /* z-index: 100; */
   /* border-radius: 0.25rem; */
@@ -905,7 +908,7 @@ li{
   
 }
 
-#mconfigurator{
+#mconfiguratorContainer{
   overflow: hidden;
   position: absolute;
   height: 95vh;
@@ -918,6 +921,36 @@ li{
   transition: 0.4s ease-in;
 }
 
+#mconfigurator{
+  /* width: 100%;
+  height: 100%; */
+}
+#modeTitleBlock{
+  padding: 0.5em 1em;
+  font-family: sans-serif;
+  color: rgb(242, 245, 248);
+}
+.modelTitle{
+  font-size: 1.75em;
+  font-weight: 600;
+  line-height: 2.5em;
+  width: 100%;
+}
+#ringSettings{
+  height: 1.2em;
+  width: 1.2em;
+  display: inline-block;
+  margin-left: 1em;
+  border: 1px solid #727272;
+  padding: 0.2em;
+  border-radius: 0.25rem;
+  background: var(--ringSettings);
+  cursor: pointer;
+}
+#ringSettings:hover{
+  background: var(--ringSettingsHover);
+  border: 1px solid #888888;
+}
 .variations{
   margin-left: 1em;
   margin-top: 1em;
@@ -964,7 +997,7 @@ li{
   width: 70vw;
   left: 15vw;
   top: 30vh;
-  z-index: 100;
+  z-index: 120;
   display: flex;
   justify-content: center;
 }
