--- a/src/style.css
+++ b/src/style.css
@@ -717,7 +717,7 @@ li{
   width: 100%;
   height: 80vh;
   background-color: #171717;
-  background-image: url('/images/weddingringad2.png');
+  background-image: url('/Jewellery/images/weddingringad2small.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
